:sparkles: `ASMifier` should print calls to `valueOf` instead of deprecated constructors of primitive wrappers