@@ -1469,7 +1469,6 @@ public class ASMifier extends Printer {
    * or an array of primitive values. May be {@literal null}.
    */
   protected void appendConstant(final Object value) {
-    StringBuilder stringBuilder = this.stringBuilder;
     if (value == null) {
       stringBuilder.append("null");
     }
@@ -1477,7 +1476,7 @@ public class ASMifier extends Printer {
       appendString(stringBuilder, (String) value);
     }
     else if (value instanceof Type) {
-      stringBuilder.append("Type.forDescriptor(\"");
+      stringBuilder.append("Type.getType(\"");
       stringBuilder.append(((Type) value).getDescriptor());
       stringBuilder.append("\")");
     }
@@ -1487,7 +1486,7 @@ public class ASMifier extends Printer {
       stringBuilder.append(handle.getOwner()).append(COMMA);
       stringBuilder.append(handle.getName()).append(COMMA);
       stringBuilder.append(handle.getDesc()).append("\", ");
-      stringBuilder.append(handle.isInterface()).append(")");
+      stringBuilder.append(handle.isInterface()).append(')');
     }
     else if (value instanceof ConstantDynamic constantDynamic) {
       stringBuilder.append("new ConstantDynamic(\"");
@@ -1505,31 +1504,31 @@ public class ASMifier extends Printer {
       stringBuilder.append("})");
     }
     else if (value instanceof Byte) {
-      stringBuilder.append("new Byte((byte)").append(value).append(')');
+      stringBuilder.append("Byte.valueOf((byte)").append(value).append(')');
     }
     else if (value instanceof Boolean) {
       stringBuilder.append(((Boolean) value).booleanValue() ? "Boolean.TRUE" : "Boolean.FALSE");
     }
     else if (value instanceof Short) {
-      stringBuilder.append("new Short((short)").append(value).append(')');
+      stringBuilder.append("Short.valueOf((short)").append(value).append(')');
     }
     else if (value instanceof Character) {
       stringBuilder
-              .append("new Character((char)")
-              .append((int) (Character) value)
+              .append("Character.valueOf((char)")
+              .append((int) ((Character) value).charValue())
               .append(')');
     }
     else if (value instanceof Integer) {
-      stringBuilder.append("new Integer(").append(value).append(')');
+      stringBuilder.append("Integer.valueOf(").append(value).append(')');
     }
     else if (value instanceof Float) {
-      stringBuilder.append("new Float(\"").append(value).append("\")");
+      stringBuilder.append("Float.valueOf(\"").append(value).append("\")");
     }
     else if (value instanceof Long) {
-      stringBuilder.append("new Long(").append(value).append("L)");
+      stringBuilder.append("Long.valueOf(").append(value).append("L)");
     }
     else if (value instanceof Double) {
-      stringBuilder.append("new Double(\"").append(value).append("\")");
+      stringBuilder.append("Double.valueOf(\"").append(value).append("\")");
     }
     else if (value instanceof byte[] byteArray) {
       stringBuilder.append("new byte[] {");
